# deep-code-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-check.yml
server/: agent.py  langgraph.json
src/deep_code_agent/: __init__.py  __main__.py  cli.py  code_agent.py  config.py  prompts.py
src/deep_code_agent/models/llms/: langchain_chat.py
src/deep_code_agent/tools/: __init__.py  terminal.py
src/deep_code_agent/tui/: __init__.py  app.py  commands.py
src/deep_code_agent/tui/bridge/: agent_bridge.py  stream_handler.py
src/deep_code_agent/tui/screens/: approval_modal.py  main_screen.py
src/deep_code_agent/tui/styles/: main.tcss
src/deep_code_agent/tui/utils/: approval.py
src/deep_code_agent/tui/widgets/: __init__.py  approval_request.py  chat_log.py  input_box.py  message_bubble.py  selectable_option.py  session_header.py  side_panel.py  status_bar.py  todos_progress_card.py  tool_call_view.py
tests/: test_cli.py  test_code_agent.py  test_interrupt_handling.py  test_langchain_chat.py  test_package_entrypoints.py  test_prompts.py  test_terminal.py
tests/tui/: test_agent_bridge_helpers.py  test_app.py  test_approval_modal.py  test_chat_log_todos.py  test_main_screen_commands.py  test_slash_commands.py  test_stream_handler.py  test_todos_progress_card.py  test_tool_call_view.py  test_widgets.py
