[project]
name = "deep-code-agent"
version = "0.1.0"
description = "A DeepAgents-based coding assistant with subagents for review, tests, docs, debugging, and refactoring."
readme = "README.md"
requires-python = ">=3.13,<4.0"
license-files = ["LICENSE"]
dependencies = [
    "deepagents>=0.2.8",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
]

[project.scripts]
deep-code-agent = "deep_code_agent:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipython>=9.8.0", "langgraph-cli[inmem]>=0.4.9"]
